<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nbp.geoquiz.MainActivity"
    android:orientation="vertical"
    android:gravity="center_vertical"
    >

    <TextView
        android:id="@+id/main_question_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_question_hight"
        android:padding="@dimen/padding_8_dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:background="#d1c4e9"
        android:textSize="@dimen/text_size"/>
    <LinearLayout
        android:layout_marginTop="@dimen/margion_16_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/main_yes_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yesbtn"
            android:background="#9575cd"
            android:textColor="#ede7f6"/>

        <Button
            android:id="@+id/main_no_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_between_button"
            android:text="@string/nobtn"
            android:background="#9575cd"
            android:textColor="#ede7f6"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/margion_16_dp"
        >

        <Button
            android:id="@+id/main_previous_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previousbtn"
            android:drawableLeft="@drawable/arrow_left"
            style="@style/ButtonStyle"
            android:layout_gravity="center_horizontal"
            android:drawablePadding="4dp"/>

        <Button
            android:id="@+id/main_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_between_button"
            android:text="@string/nextbtn"
            android:drawableRight="@drawable/arrow_right"
            style="@style/ButtonStyle"
            android:layout_gravity="center_horizontal"
            android:drawablePadding="4dp"/>


    </LinearLayout>


    <Button
        android:id="@+id/main_star_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margion_120_dp"
        style="@style/ButtonStyle"
        android:text="@string/textofstyle"/>
</LinearLayout>
